@@ -1,3 +1,8 @@
+22 March 2017: Wouter
+	- Fix #1238: segmentation fault when adding through the remote
+	  interface a per-view local zone to a view with no previous
+	  (configured) local zones.
+
 21 March 2017: Ralph
 	- Merge EDNS Client subnet implementation from feature branch into main
 	  branch, using new EDNS processing framework. 
